--- a/public_html/templates/reset_password.html
+++ b/public_html/templates/reset_password.html
@@ -1,59 +1,70 @@
-<div style="margin: 0 auto;
-padding: 20px 5px;
-max-width: 450px;
-min-width: 250px;
-font-family: sans-serif;
-color: #3e3e3e;">
-    <div style="text-align: center;
-    margin-bottom: 35px;">
-        <img alt="citadel" src="cid:site-logo" width="221" height="40">
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Reset Password</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+<body style="margin: 0; padding: 0;">
+    <div style="margin: 0 auto;
+    padding: 20px 5px;
+    max-width: 450px;
+    min-width: 250px;
+    font-family: sans-serif;
+    color: #3e3e3e;">
+        <div style="text-align: center;
+        margin-bottom: 35px;">
+            <img alt="citadel" src="cid:site-logo" width="221" height="40">
+        </div>
+        <div style="padding: 10px;
+        padding-top: 30px;
+        border: 1px solid lightgray;
+        box-shadow: 0px 0px 6px 1px #d2d2d2;
+        margin-bottom: 40px;">
+            <div style="font-size: 1.0em;
+            line-height: 27px;
+            margin-bottom: 20px;">
+                You can't access your account? No problem. Click the link button below to change your password.
+            </div>
+            <div style="text-align: center; margin-bottom: 40px;">
+                <a style="display: inline-block; 
+                text-decoration: none;
+                color: white;
+                padding: 10px 24px;
+                border-radius: 4px;
+                background-color: #00afef;" href="<%= verification_url %>">Change Password</a>
+            </div>
+            <div style="font-size: 1.0em;
+            line-height: 27px;
+            margin-bottom: 50px;">
+                If you did not expect this email, someone might mistype their email.
+                Kindly ignore this message.
+            </div>
+        </div>
+        <div style="text-align: center;">
+            <div style="margin-bottom: 20px;">
+                <ul style="list-style: none;
+            padding: 0;
+            margin: 0;
+            display: inline;">
+                    <li style="display: inline-block; padding-right: 10px;">
+                        <a href="https://web.facebook.com/thecitadelcapitalpartners/">
+                            <img alt="facebook" src="cid:fb-logo" width="45" height="45">
+                        </a>
+                    </li>
+                    <li style="display: inline-block;">
+                        <a href="https://twitter.com/JamieCitadel">
+                            <img alt="twitter" src="cid:tw-logo" width="45" height="45">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div style="font-size: 0.85em;
+            line-height: 16px;">
+                &copy; <%= year %> Thecitadelcapitalpartners, Salesforce Tower, 110 Bishopsgate, London
+            </div>
+        </div>
     </div>
-    <div style="padding: 10px;
-    padding-top: 30px;
-    border: 1px solid lightgray;
-    box-shadow: 0px 0px 6px 1px #d2d2d2;
-    margin-bottom: 40px;">
-        <div style="font-size: 1.0em;
-        line-height: 27px;
-        margin-bottom: 20px;">
-            You can't access your account? No problem. Click the link button below to change your password.
-        </div>
-        <div style="text-align: center; margin-bottom: 40px;">
-            <a style="display: inline-block; 
-            text-decoration: none;
-            color: white;
-            padding: 10px 24px;
-            border-radius: 4px;
-            background-color: #00afef;" href="<%= verification_url %>">Change Password</a>
-        </div>
-        <div style="font-size: 1.0em;
-        line-height: 27px;
-        margin-bottom: 50px;">
-            If you did not expect this email, someone might mistype their email.
-            Kindly ignore this message.
-        </div>
-    </div>
-    <div style="text-align: center;">
-        <div style="margin-bottom: 20px;">
-            <ul style="list-style: none;
-           padding: 0;
-           margin: 0;
-           display: inline;">
-                <li style="display: inline-block; padding-right: 10px;">
-                    <a href="https://web.facebook.com/thecitadelcapitalpartners/">
-                        <img alt="facebook" src="cid:fb-logo" width="45" height="45">
-                    </a>
-                </li>
-                <li style="display: inline-block;">
-                    <a href="https://twitter.com/JamieCitadel">
-                        <img alt="twitter" src="cid:tw-logo" width="45" height="45">
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div style="font-size: 0.85em;
-        line-height: 16px;">
-            &copy; <%= year %> Thecitadelcapital, 392 Triq il Kanun, Santa Venera, Malta
-        </div>
-    </div>
-</div>
+</body>
+</html>
