--- a/public_html/templates/email_verification.html
+++ b/public_html/templates/email_verification.html
@@ -1,57 +1,68 @@
-<div style="margin: 0 auto;
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en-US">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <title>Email Verification</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+</head>
+<body style="margin: 0; padding: 0;">
+    <div style="margin: 0 auto;
 padding: 20px 5px;
 max-width: 450px;
 min-width: 250px;
 font-family: sans-serif;
 color: #3e3e3e;">
-    <div style="text-align: center;
+        <div style="text-align: center;
     margin-bottom: 35px;">
-        <img alt="citadel" src="cid:site-logo" width="221" height="40" />
-    </div>
-    <div style="padding: 10px;
+            <img alt="citadel" src="cid:site-logo" width="221" height="40" />
+        </div>
+        <div style="padding: 10px;
     padding-top: 30px;
     border: 1px solid lightgray;
     box-shadow: 0px 0px 6px 1px #d2d2d2;
     margin-bottom: 40px;">
-        <div style="font-size: 1.2em;
+            <div style="font-size: 1.2em;
         font-weight: bold;
         margin-bottom: 20px;">
-            Hi, <%= username %>!
-        </div>
-        <div style="font-size: 1.0em;
+                Hi, <%= username %>!
+            </div>
+            <div style="font-size: 1.0em;
         line-height: 27px;
         margin-bottom: 20px;">
-            You are a step away from enjoying our exclusive services.</br>
-            <a style="text-decoration: underline; color: #219bd9;" href="<%= verification_url %>">Please, click this link to verify your email address</a>.
-        </div>
-        <div style="font-size: 1.0em;
+                You are a step away from enjoying our exclusive services.</br>
+                <a style="text-decoration: underline; color: #219bd9;" href="<%= verification_url %>">Please, click this
+                    link to verify your email address</a>.
+            </div>
+            <div style="font-size: 1.0em;
         line-height: 27px;
         margin-bottom: 50px;">
-            If you did not expect this email, someone might have mistyped their email. 
-            Kindly ignore this message.
+                If you did not expect this email, kindly ignore this message.
+            </div>
         </div>
-    </div>
-    <div style="text-align: center;">
-        <div style="margin-bottom: 20px;">
-            <ul style="list-style: none;
+        <div style="text-align: center;">
+            <div style="margin-bottom: 20px;">
+                <ul style="list-style: none;
            padding: 0;
            margin: 0;
            display: inline;">
-                <li style="display: inline-block; padding-right: 10px;">
-                    <a href="https://web.facebook.com/thecitadelcapitalpartners/">
-                        <img alt="facebook" src="cid:fb-logo" width="45" height="45" />
-                    </a>
-                </li>
-                <li style="display: inline-block;">
-                    <a href="https://twitter.com/JamieCitadel">
-                        <img alt="twitter" src="cid:tw-logo" width="45" height="45" />
-                    </a>
-                </li>
-            </ul>
-        </div>
-        <div style="font-size: 0.85em;
+                    <li style="display: inline-block; padding-right: 10px;">
+                        <a href="https://web.facebook.com/thecitadelcapitalpartners/">
+                            <img alt="facebook" src="cid:fb-logo" width="45" height="45" />
+                        </a>
+                    </li>
+                    <li style="display: inline-block;">
+                        <a href="https://twitter.com/JamieCitadel">
+                            <img alt="twitter" src="cid:tw-logo" width="45" height="45" />
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div style="font-size: 0.85em;
         line-height: 16px;">
-            &copy; <%= year %> Thecitadelcapital, 392 Triq il Kanun, Santa Venera, Malta
+                &copy; <%= year %> Thecitadelcapitalpartners, Salesforce Tower, 110 Bishopsgate, London
+            </div>
         </div>
     </div>
-</div>
+</body>
+</html>
